Update Quantum Variational Classifier.ipynb

--- a/Qiskit/Quantum Variational Classifier.ipynb
+++ b/Qiskit/Quantum Variational Classifier.ipynb
@@ -5,7 +5,7 @@
    "id": "4e0abd4c",
    "metadata": {},
    "source": [
-    "1. We create 20 training data points and 5 testing data points of 2 features from each class."
+    "1-We create 20 training data points and 5 testing data points of 2 features from each class."
    ]
   },
   {
@@ -35,7 +35,7 @@
    "id": "17c5a6c1",
    "metadata": {},
    "source": [
-    "2. We prepare the classification circuit, using the Qiskit ZZFeatureMap as the data encoding circuit, and the Qiskit TwoLocal circuit with  and  rotations and controlled-phase gates,"
+    "2-We prepare the classification circuit, using the Qiskit ZZFeatureMap as the data encoding circuit, and the Qiskit TwoLocal circuit with  and  rotations and controlled-phase gates,"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "id": "f7078e18",
    "metadata": {},
    "source": [
-    "3. We create a function that associates the data to the feature map and the variational parameters to the variational circuit. This is to ensure that the right parameters in the circuit are associated with the right quantities."
+    "3-We create a function that associates the data to the feature map and the variational parameters to the variational circuit. This is to ensure that the right parameters in the circuit are associated with the right quantities."
    ]
   },
   {
@@ -158,7 +158,7 @@
    "id": "780d0e3f",
    "metadata": {},
    "source": [
-    "4. We create a class assignment function to calculate the parity of the given bitstring. If the parity is even, it returns a 1 label, and if the parity is odd it returns a 0 label"
+    "4-We create a class assignment function to calculate the parity of the given bitstring. If the parity is even, it returns a 1 label, and if the parity is odd it returns a 0 label"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "id": "58551103",
    "metadata": {},
    "source": [
-    "5. We create a function that returns the probability distribution over the label classes, given experimental counts from running the quantum circuit multiple times."
+    "5-We create a function that returns the probability distribution over the label classes, given experimental counts from running the quantum circuit multiple times."
    ]
   },
   {
@@ -205,7 +205,7 @@
    "id": "e11892d1",
    "metadata": {},
    "source": [
-    "6. We create a function that classifies our data. It takes in data and parameters. For every data point in the dataset, we assign the parameters to the feature map and the parameters to the variational circuit. We then evolve our system and store the quantum circuit, so as to run the circuits at once at the end. We measure each circuit and return the probabilities based on the bit string and class labels."
+    "6-We create a function that classifies our data. It takes in data and parameters. For every data point in the dataset, we assign the parameters to the feature map and the parameters to the variational circuit. We then evolve our system and store the quantum circuit, so as to run the circuits at once at the end. We measure each circuit and return the probabilities based on the bit string and class labels."
    ]
   },
   {
@@ -239,7 +239,7 @@
    "id": "af2e5f62",
    "metadata": {},
    "source": [
-    "7. For training, we create the loss and cost functions."
+    "7-For training, we create the loss and cost functions."
    ]
   },
   {
@@ -288,7 +288,7 @@
    "id": "4046d809",
    "metadata": {},
    "source": [
-    "8. We set up our classical optimizer, using SPSA, initialize our variational circuit parameters for reproducibility, and optimize our cost function modifying the variational circuit parameters, using our 40 training data points. The optimization will take a while to run."
+    "8-We set up our classical optimizer, using SPSA, initialize our variational circuit parameters for reproducibility, and optimize our cost function modifying the variational circuit parameters, using our 40 training data points. The optimization will take a while to run."
    ]
   },
   {
@@ -366,7 +366,7 @@
    "id": "f2f19abf",
    "metadata": {},
    "source": [
-    "9. We implement a function to score our variational quantum classifier, using the classification function we created earlier, and use it to test our trained classifier on our 10 test data points."
+    "9-We implement a function to score our variational quantum classifier, using the classification function we created earlier, and use it to test our trained classifier on our 10 test data points."
    ]
   },
   {
